# uddhava

./: .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  API_ENDPOINTS.md  CHECKLIST.md  CLEANUP_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  GMAIL_RENDER_FIX.md  IMPLEMENTATION_CHECKLIST.md  QUICK_START.md  README.md  SECURITY_AUDIT_REPORT.md  SETUP_GUIDE.md  alembic.ini  cloudbuild.yaml  database.py  format.sh  init_db.py  main.py  models.py  pyproject.toml  render.yaml  requirements-prod.txt  requirements.txt  ruff.toml  start-render.sh  start.sh  test_reference_apis.sh  test_render_smtp.sh  test_smtp_connection.py  upload.env
.github/: CODEOWNERS  DEVELOPMENT_WORKFLOW.md  pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  001_initial.py  07f90a5eaab3_add_file_upload_fields_to_devotee.py  117d9e2d09f8_make_profile_fields_nullable_for_.py  20250122_0001_add_email_verification_fields.py  20250914_0001_baseline.py  20250914_2344_add_password_hash.py  20250915_0001_make_chanting_rounds_optional.py  20250917_0001_add_role_to_users.py  20250917_0002_add_password_reset_fields.py  20250917_0003_remove_unnecessary_indexes.py  20250921_0001_create_devotee_model.py  388bc7cf258c_add_initiated_name_to_devotees.py  4f8325c2d1be_complete_yatra_redesign_cleanup.py  9fdafadf3009_redesign_yatra_system_with_reusable_.py  a4da34a45d76_change_qr_code_url_to_text_type.py  c915906b5a67_create_yatra_and_registration_tables.py  ca58fdff23ec_update_marital_status_enum_values.py  da97198bd197_clean_slate_yatra_redesign.py  e6a131e6945e_fix_enum_data_values_for_gender_and_.py
alembic/versions_archive/: 20250914_0001_baseline.py  20250914_2344_add_password_hash.py  20250921_0001_create_devotee_model.py
app/: __init__.py
app/api/: __init__.py
app/api/routes/: __init__.py  auth.py  auth_light.py  centers.py  country_codes.py  devotee_auth.py  devotees.py  diagnostics.py  health.py  payment_options.py  pricing_templates.py  room_categories.py  spiritual_masters.py  users.py  yatra_registrations.py  yatra_registrations_v2.py  yatras.py
app/api/routes_archive/: centers.py  country_codes.py  devotee_auth.py  devotees.py  payment_options.py  room_categories.py  spiritual_masters.py  yatra_registrations.py  yatras.py
app/core/: auth_decorators.py  auth_middleware.py  auth_security.py  config.py  dependencies.py  logging_config.py  middleware.py  monitoring.py  openapi.py  password_validation.py  performance.py  responses.py  security.py  security_config.py  validation.py  yatra_validators.py
app/data/: __init__.py  centers.py  country_codes.py  spiritual_masters.py
app/db/: models.py  session.py
app/repositories/: registration_repository.py  yatra_repository.py
app/schemas/: auth.py  center.py  country_code.py  devotee.py  devotee_responses.py  email_verification.py  health.py  password_reset.py  payment_option.py  pricing_template.py  room_category.py  spiritual_master.py  user.py  yatra.py  yatra_member.py  yatra_registration.py
app/services/: __init__.py  devotee_service.py  email_service.py  gmail_service.py  payment_option_service.py  pricing_template_service.py  room_category_service.py  smtp_service.py  storage_service.py  user_service.py  yatra_registration_service.py  yatra_registration_service_v2.py  yatra_service.py
app/utils/: admin_utils.py  yatra_helpers.py
static/: .gitkeep
templates/: index.html
templates/emails/: email_verification.html  email_verification_success.html  password_reset.html  payment_approval.html
tests/: conftest.py  test_authentication.py  test_health.py  test_yatra.py
